footer nav and logo

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $primary-color:#C90000;
 $secondary-text-color:#B2B2B2;
 $primary-bg-color:#FFFFFF;
+$secondary-bg-color:#0F0F0F;
 $primary-text-color:#222222;
