footer test version

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,4 @@ $secondary-text-color:#B2B2B2;
 $primary-bg-color:#FFFFFF;
 $secondary-bg-color:#0F0F0F;
 $primary-text-color:#222222;
+$button_footer-color:#FFFFFF;
