--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -1,4 +1,29 @@
+@import '@/styles/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .footer {
-    width: fit-content!important;
-    background: black!important;
+    padding: 5% 0;
+    color: $button_footer-color;
+    background: $secondary-bg-color;
+
+    a {
+        text-decoration: none;
+        margin-left: 10px;
+        color: $button_footer-color;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
+
+.location {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    font-style: normal;
+}
+
+.social {
+    width: fit-content;
+
 }
