--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -1,9 +1,21 @@
+@import "../../styles/variables.scss";
 .header {
   display: flex;
-  .logo {
-    text-decoration: none;
-  }
-  .nav {
-    display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 82px;
+  width: 100%;
+  .phone__btn {
+    width: 226px;
+    height: 47px;
+    background-color: $primary-color;
+    border: none;
+    color: $primary-bg-color;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    cursor: pointer;
   }
 }
