--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -8,7 +8,6 @@
 
     a {
         text-decoration: none;
-        margin-left: 10px;
         color: $button_footer-color;
         font-weight: 500;
         font-size: 16px;
@@ -23,7 +22,25 @@
     font-style: normal;
 }
 
+.ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    
+}
+
 .social {
     width: fit-content;
+    display: flex;
+    flex-direction: column;
+    
+    
 
 }
+.nav_ul__h6PIg a{
+    color: white!important;
+}
+
+
+
