--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -27,20 +27,25 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
-    
+    gap: 2.3em!important;
+    li {
+        display: flex;
+        &:nth-child(3) {
+            order: 4;
+        }
+        &:nth-child(4) {
+            order: 3;
+        }
+    }
+
+    a {
+        color: white !important;
+    }
+
 }
 
 .social {
     width: fit-content;
     display: flex;
     flex-direction: column;
-    
-    
-
 }
-.nav_ul__h6PIg a{
-    color: white!important;
-}
-
-
-
