--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -1,21 +1,37 @@
 @import "../../styles/variables.scss";
 .header {
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
   height: 82px;
   width: 100%;
-  .phone__btn {
-    width: 226px;
-    height: 47px;
-    background-color: $primary-color;
-    border: none;
-    color: $primary-bg-color;
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 18px;
-    cursor: pointer;
+  background-color: $primary-bg-color;
+
+  .action__bar {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    a {
+      text-decoration: none;
+    }
+    .phone__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 226px;
+      height: 47px;
+      background-color: $primary-color;
+      border: none;
+      color: $primary-bg-color;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 18px;
+      cursor: pointer;
+      margin-left: 25px;
+    }
   }
 }
