--- a/src/pages/about/index.module.scss
+++ b/src/pages/about/index.module.scss
@@ -1,5 +1,10 @@
 @import "../../styles/variables.scss";
+
 .history__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .h1 {
     display: flex;
     justify-content: center;
@@ -9,6 +14,7 @@
     font-size: 36px;
     line-height: 44px;
     color: $primary-color;
+    margin-bottom: 25px;
   }
   .p {
     font-family: "Montserrat";
@@ -18,8 +24,42 @@
     line-height: 27px;
     text-align: center;
     color: $secondary-text-color;
+    margin-bottom: 60px;
   }
-  span {
+  .span {
+    display: flex;
+    justify-content: center;
     color: $primary-color;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 32px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .left_right_blocks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    .block {
+      padding: 78px 50px 77px 50px;
+      border-bottom: 1px solid $primary-color;
+      width: 610px;
+      height: 484px;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 27px;
+      letter-spacing: 0.05em;
+      margin-bottom: 70px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      transition: 0.5s;
+      &:hover {
+        transform: translateY(-10px);
+      }
+    }
   }
 }
