--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -1,3 +1,8 @@
 .card_container {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    height: 400px;
+
+    &:hover {
+        scale: 1.05;transition: ease-in-out 0.4s;
+    }
 }
