--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -3,6 +3,7 @@
     height: 400px;
 
     &:hover {
-        scale: 1.05;transition: ease-in-out 0.4s;
+        scale: 1.05;
+        transition: ease-in-out 0.4s;
     }
 }
