--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -20,6 +20,9 @@
     font-size: 16px;
     line-height: 20px;
     font-style: normal;
+    @media (max-width: 767px) {
+        gap:1.5em!important;
+    }
 }
 
 .ul {
@@ -46,6 +49,7 @@
     a {
         color: white !important;
     }
+   
     
 
 }
