changes to catalog

--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -7,6 +7,7 @@
     height: 400px;
     font-family: 'Montserrat';
     font-style: normal;
+
     &:hover {
         scale: 1.05;
         transition: ease-in-out 0.4s;
@@ -20,8 +21,28 @@
         align-items: center;
         justify-content: space-around;
 
+        .card_title {
+            width: 100%;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 18px;
+        }
 
-        
+        .card_model {
+            width: 100%;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            color: #B2B2B2;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 14px;
+        }
+
+
 
         .card__producer {
             width: 100%;
