--- a/src/components/cart/qtyBtn/index.module.scss
+++ b/src/components/cart/qtyBtn/index.module.scss
@@ -1,30 +1,43 @@
 .btn_container {
-
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
+
     .btn_decrease {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 30px;
-        height: 30px;
-        color:white;
+        width: 40px;
+        height: 40px;
+        font-size: 48px;
+        color: white;
         background: #C90000;
         border: none;
         border-radius: 50%;
+        padding-bottom: 8px;
     }
+
     .quantity {
-        width: 10px;
+        width: 11px;
+        display: flex;
+        justify-content: center;
+        
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-size: 18px;
+        font-weight: 600;
+        align-self: center;
     }
+
     .btn_increase {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 30px;
-        height: 30px;
-        color:white;
+        font-size: 36px;
+        width: 40px;
+        height: 40px;
+        color: white;
         background: #C90000;
         border: none;
         border-radius: 50%;
