--- a/src/components/cart/cardItemCard/index.module.scss
+++ b/src/components/cart/cardItemCard/index.module.scss
@@ -8,11 +8,12 @@
     border: 2px solid #E5E5E5;
     font-family: 'Montserrat';
     font-style: normal;
+
     .img_name_wrapper {
         display: flex;
         align-items: center;
         gap: 20px;
-    } 
+    }
 }
 
 .title {
@@ -56,9 +57,21 @@
     font-size: 24px;
     line-height: 24px
 }
-.increase_btn, .decrease_btn {
-    background: none!important;
-    border: 1px solid #E3E3E3!important;
-    border-radius: 0!important;
-    color: #0F0F0F!important;
+
+.increase_btn {
+    background: none !important;
+    border: 1px solid #E3E3E3 !important;
+    border-radius: 0 !important;
+    color: #0F0F0F !important;
+}
+
+.decrease_btn {
+    background: none !important;
+    border: 1px solid #E3E3E3 !important;
+    border-radius: 0 !important;
+    color: #0F0F0F !important;
+
+}
+.decrease_btn_disabled {
+    color: #E3E3E3!important;
 }
