--- a/src/pages/cart/index.module.scss
+++ b/src/pages/cart/index.module.scss
@@ -54,12 +54,21 @@
     border: none;
     color: #C90000;
 
+    &:hover {
+        scale: 1.1;
+    }
 }
 
 .payment_link {
     margin-right: 20px;
     text-decoration: none;
     color: #C90000;
+
+    &:hover {
+        scale: 1.1;
+        text-decoration: none;
+        color: #C90000;
+    }
 
 }
 
@@ -82,7 +91,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        margin-top: 20px;
+        margin: 20px 0;
     }
 
     .total_price {
@@ -118,6 +127,7 @@
         align-items: center;
 
         .payment_link_down {
+            text-align: center;
             margin-right: 20px;
             text-decoration: none;
             padding: 16px 45px;
@@ -136,6 +146,7 @@
 }
 
 .contiue_shopping_btn {
+    text-align: center;
     margin-right: 20px;
     text-decoration: none;
     padding: 16px 45px;
@@ -145,5 +156,39 @@
 
     &:hover {
         scale: 1.1;
+        color: #C90000;
     }
 }
+
+.accord_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+}
+
+.customHeader {
+    width: 100%;
+    padding: 0;
+    border: none;
+    background: none;
+}
+
+.customBody {
+    align-self: flex-start;
+    background: #C90000;
+}
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    input {
+        border: none;
+        border-bottom: 1px solid #C90000;
+        padding: 10px 5px;
+        &:focus {
+            border:none!important;
+        }
+    }
+} 
