--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -50,3 +50,8 @@
   font-size: 32px;
   line-height: 39px;
 }
+.popular_product__section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
