--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -88,3 +88,75 @@
   line-height: 39px;
   color: $secondary-bg-color;
 }
+.producer_line {
+  margin-top: 90px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  gap: 200px;
+  width: 100%;
+  height: 118px;
+  background-color: $primary-color;
+}
+.history_block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  .h4 {
+    margin-top: 90px;
+    display: flex;
+    justify-content: center;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    color: $primary-color;
+  }
+  .p {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    text-align: center;
+    color: $secondary-text-color;
+  }
+  .history_btn {
+    text-decoration: none !important;
+    margin-top: 50px;
+    cursor: pointer;
+    width: 281px;
+    height: 51px;
+    background-color: $primary-color;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 45px;
+    gap: 10px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 18px;
+    color: $primary-bg-color;
+    margin-bottom: 90px;
+  }
+}
+.question__section {
+  .p {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    color: $secondary-bg-color;
+  }
+  .accordion {
+    height: 78px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    background-color: $primary-bg-color;
+  }
+}
