--- a/src/components/favorites/favItemCard/index.module.scss
+++ b/src/components/favorites/favItemCard/index.module.scss
@@ -1,5 +1,4 @@
-.cartItem_container {
-    width: 100%;
+.favItem_container {
     display: flex;
     padding: 20px 0px;
     justify-content: space-around;
@@ -9,11 +8,21 @@
     font-family: 'Montserrat';
     font-style: normal;
     margin-bottom: 15px;
+    
 
     .img_name_wrapper {
         display: flex;
         align-items: center;
         gap: 20px;
+    }
+    @media screen and (max-width: 768px) {
+        gap: 20px;
+        padding: 20px 0px;
+        .img_name_wrapper {
+            
+            gap: 10px;
+        }
+        
     }
 }
 
@@ -51,6 +60,12 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     object-fit: contain;
     padding: 10px;
+    margin: auto;
+    @media screen and (max-width: 768px) {
+        width: 250px;
+        height: 250px;
+        
+    }
 }
 
 .item_price {
@@ -73,6 +88,31 @@
     color: #0F0F0F !important;
 
 }
+
 .decrease_btn_disabled {
-    color: #E3E3E3!important;
+    color: #E3E3E3 !important;
+}
+
+.btn_simple {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #C90000;
+    color: #FFFFFF;
+    border: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 18px;
+    padding: 20px 45px;
+
+}
+.increaseBtn,
+.decreaseBtn {
+    border-radius: 50%!important;
+    background: white!important;
+    color: #C90000!important;
+    width: fit-content;
+    
+
 }
