--- a/src/pages/favorites/index.module.scss
+++ b/src/pages/favorites/index.module.scss
@@ -26,6 +26,7 @@
     background: none;
     border: none;
     color: #C90000;
+    margin-bottom: 10px;
 }
 
 .bottom_clear_btn {
@@ -46,7 +47,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
-    line-height: 18px;
+    line-height: 28px;
     background: none;
     border: none;
     color: #C90000;
