--- a/src/pages/favorites/index.module.scss
+++ b/src/pages/favorites/index.module.scss
@@ -1,10 +1,11 @@
 .fav_container {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 310px;
+    overflow-y: scroll;
 }
 
 .fav_title {
