--- a/src/components/favorites/favItemCard/index.module.scss
+++ b/src/components/favorites/favItemCard/index.module.scss
@@ -1,4 +1,7 @@
-.favItem_container {
+@import "/src/styles/variables.scss";
+
+.favItem {
+  &__container {
     display: flex;
     padding: 20px 0px;
     justify-content: space-around;
@@ -7,112 +10,89 @@
     border: 2px solid #E5E5E5;
     font-family: 'Montserrat';
     font-style: normal;
-    margin-bottom: 15px;
-    
 
-    .img_name_wrapper {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
     @media screen and (max-width: 768px) {
-        gap: 20px;
-        padding: 20px 0px;
-        .img_name_wrapper {
-            
-            gap: 10px;
-        }
-        
+      gap: 20px;
+      padding: 20px 0px;
     }
-}
+  }
 
-.title {
+  &__imgNameWrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    @media screen and (max-width: 768px) {
+      gap: 10px;
+    }
+  }
+
+  &__title {
     width: 100%;
     display: flex;
     justify-content: start;
     align-items: center;
-
     font-weight: 700;
     font-size: 24px;
     line-height: 26px;
-}
+  }
 
-.card_model {
+  &__cardModel {
     width: 100%;
     display: flex;
     justify-content: start;
     align-items: center;
-    color: #B2B2B2;
+    color: $secondary-text-color;
     font-weight: 700;
     font-size: 14px;
     line-height: 14px;
-}
+  }
 
-.remove_btn {
-    border: none;
-    background: none;
-    font-size: 28px;
-    color: #C90000;
-}
+  &__itemPrice {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+  }
 
-
-.image {
+  &__image {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     object-fit: contain;
     padding: 10px;
     margin: auto;
+
     @media screen and (max-width: 768px) {
-        width: 250px;
-        height: 250px;
-        
+      width: 250px;
+      height: 250px;
     }
-}
-
-.item_price {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 24px
-}
-
-.increase_btn {
-    background: none !important;
-    border: 1px solid #E3E3E3 !important;
-    border-radius: 0 !important;
-    color: #0F0F0F !important;
-}
-
-.decrease_btn {
-    background: none !important;
-    border: 1px solid #E3E3E3 !important;
-    border-radius: 0 !important;
-    color: #0F0F0F !important;
+  }
 
 }
 
-.decrease_btn_disabled {
-    color: #E3E3E3 !important;
-}
-
-.btn_simple {
+.btn {
+  &__simple {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    background: #C90000;
-    color: #FFFFFF;
+    background: $primary-color;
+    color: $button_footer-color;
     border: none;
     font-weight: 500;
     font-size: 20px;
-    line-height: 18px;
+    line-height: 24px;
     padding: 20px 45px;
+    margin: 20px 0;
+  }
 
-}
-.increaseBtn,
-.decreaseBtn {
-    border-radius: 50%!important;
-    background: white!important;
-    color: #C90000!important;
-    width: fit-content;
-    
+  &__increase,
+  &__decrease {
+    background: none !important;
+    border: 1px solid $primary-bg-color !important;
+    border-radius: 0 !important;
+    color: $primary-bg-color !important;
+  }
 
+  &__decreaseDisabled {
+    color: $primary-bg-color !important;
+  }
 }
