--- a/src/components/favorites/index.module.scss
+++ b/src/components/favorites/index.module.scss
@@ -1,26 +1,26 @@
-.fav_item_container {
+@import "/src/styles/variables.scss";
+
+.favItemContainer {
     position: relative;
-}
 
-.fav_icon {
-    // position: relative;
-    cursor: pointer;
-}
+    &__favIcon {
+        cursor: pointer;
+    }
 
-
-.total_items {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    width: 22px;
-    height: 22px;
-    text-align: center;
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    color: white;
-    background: red;
-    padding: 0.5em;
-    border-radius: 50%;
+    &__totalItems {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        width: 22px;
+        height: 22px;
+        text-align: center;
+        position: absolute;
+        top: -10px;
+        left: -10px;
+        color: $primary-bg-color;
+        background: $primary-color;
+        padding: 0.5em;
+        border-radius: 50%;
+    }
 }
