--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$primary-color:#C90000;
-$secondary-text-color:#B2B2B2;
-$primary-bg-color:#FFFFFF;
-$secondary-bg-color:#0F0F0F;
-$primary-text-color:#222222;
-$button_footer-color:#FFFFFF;
+$primary-color: #c90000;
+$secondary-text-color: #b2b2b2;
+$primary-bg-color: #ffffff;
+$secondary-bg-color: #0f0f0f;
+$primary-text-color: #222222;
+$button_footer-color: #ffffff;
