--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -152,6 +152,7 @@
 .question__section {
   margin-top: 90px;
   margin: 0 auto;
+  margin-bottom: 90px;
   .retreat {
     display: flex;
     flex-direction: column;
@@ -215,6 +216,67 @@
       transition: 0.5s;
       &:hover {
         transform: translateY(-5px);
+      }
+    }
+  }
+}
+
+.feedbacks {
+  &__title {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    color: $secondary-bg-color;
+  }
+  &__card {
+    width: 295px;
+    height: 300px;
+    background: #ffffff;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    padding: 25px;
+
+    &_date {
+      color: $secondary-text-color;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 14px;
+      margin-bottom: 20px;
+    }
+    &_name {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 27px;
+      color: $primary-color;
+    }
+    &_text {
+      margin-top: 20px;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      color: rgba(15, 15, 15, 0.6);
+    }
+    &_btn {
+      width: 245px;
+      height: 40px;
+      border: 1px solid rgba(0, 0, 0, 0.6);
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 18px;
+      background-color: $primary-bg-color;
+      transition: 0.4s;
+      &:hover {
+        background-color: $primary-color;
+        color: #ffffff;
       }
     }
   }
