--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -19,6 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    cursor: pointer;
 
     .new_fav_container {
       width: 100%;
