--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -54,6 +54,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  a {
+    text-decoration: none;
+  }
 }
 .category_product_section {
   display: grid;
