--- a/src/components/nav/index.module.scss
+++ b/src/components/nav/index.module.scss
@@ -1,10 +1,10 @@
 @import "../../styles/variables.scss";
+
 .nav {
   display: flex;
   align-items: center;
+
   .ul {
-    display: flex;
-    align-items: center;
     list-style-type: none;
     display: flex;
     gap: 69px;
@@ -21,9 +21,11 @@
       font-size: 18px;
       line-height: 18px;
       transition: 0.5s;
+
       .selected {
         color: aqua;
       }
+
       &:after {
         content: "";
         position: absolute;
@@ -45,7 +47,7 @@
   }
 }
 
-//💬 Breakpoints //
+// Breakpoints
 @media only screen and (max-width: 992px) {
   .nav {
     .ul {
