--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -1,71 +1,75 @@
 @import "../../styles/variables.scss";
-.header {
-  position: fixed;
-  top: 0;
+.container__header {
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 82px;
-  width: 100%;
-  background-color: $primary-bg-color;
-  z-index: 1;
-
-  .action__bar {
+  justify-content: center;
+  .header {
+    position: fixed;
+    top: 0;
     display: flex;
     align-items: center;
-    gap: 15px;
-    a {
-      text-decoration: none;
-    }
-    .phone__btn {
+    justify-content: space-around;
+    height: 82px;
+    width: 100%;
+    background-color: $primary-bg-color;
+    z-index: 9999;
+
+    .action__bar {
       display: flex;
-      justify-content: center;
       align-items: center;
-      width: 226px;
-      height: 47px;
-      background-color: $primary-color;
-      border: none;
-      color: $primary-bg-color;
-      font-family: "Montserrat";
-      font-style: normal;
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 18px;
-      cursor: pointer;
-      margin-left: 25px;
-      transition: 0.5s;
-      &:hover {
-        transform: translateY(-5px);
+      gap: 15px;
+      a {
+        text-decoration: none;
+      }
+      .phone__btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 226px;
+        height: 47px;
+        background-color: $primary-color;
+        border: none;
+        color: $primary-bg-color;
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 18px;
+        cursor: pointer;
+        margin-left: 25px;
+        transition: 0.5s;
+        &:hover {
+          transform: translateY(-5px);
+        }
       }
     }
-  }
-  /* ... */
+    /* ... */
 
-  .menu__toggle {
-    display: none;
-  }
-
-  @media (max-width: 1000px) {
     .menu__toggle {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      border: none;
-      align-items: center;
-      gap: 7px;
+      display: none;
     }
 
-    .menu__icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 25px;
-      height: 3px;
-      background-color: $primary-color;
-    }
+    @media (max-width: 1000px) {
+      .menu__toggle {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border: none;
+        align-items: center;
+        gap: 7px;
+      }
 
-    .phone__btn {
-      display: none !important ;
+      .menu__icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 25px;
+        height: 3px;
+        background-color: $primary-color;
+      }
+
+      .phone__btn {
+        display: none !important ;
+      }
     }
   }
 }
