--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,8 @@
 @import "../styles/variables.scss";
-
+.swiper__contsiner {
+  margin: 0 auto;
+  max-width: 100%;
+}
 .search__block {
   position: absolute;
   left: 167px;
