--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -45,6 +45,10 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 18px;
+      color: black;
+      // a {
+      //   text-decoration: none;
+      // }
     }
 
     .card_model {
@@ -78,6 +82,7 @@
         font-weight: 700;
         font-size: 20px;
         line-height: 24px;
+        color: black;
       }
 
       .on_stock {
