--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -1,3 +1,5 @@
+
+
 .card_wrapper {
   display: flex;
   flex-direction: column;
@@ -20,6 +22,7 @@
     align-items: center;
     justify-content: space-around;
     cursor: pointer;
+   
 
     .new_fav_container {
       width: 100%;
@@ -45,6 +48,7 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 18px;
+      color: black;
     }
 
     .card_model {
