product_card_test

--- a/src/layouts/index.module.scss
+++ b/src/layouts/index.module.scss
@@ -1,11 +1,11 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .main {
-    flex-grow: 1;
-    width: 90%;
-    margin: 100px auto auto auto;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex-grow: 1;
+  width: 100%;
+  // margin: 100px auto auto auto;
+}
