--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,9 +5,6 @@ body {
   margin: 0;
   padding: 0;
 }
-main {
-  @include flex-column-center;
-}
 
 ::-webkit-scrollbar {
   width: 15px;
@@ -19,12 +16,12 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  border: 1px solid #C90000;
-  background: #FFFFFF;
+  border: 1px solid #c90000;
+  background: #ffffff;
   border-radius: 10px;
 
   &:hover {
-    background: #C90000;
+    background: #c90000;
   }
 }
 
@@ -32,11 +29,11 @@ main {
   @include flex-center;
   width: 45px;
   margin: 0 0.3em;
-  background: #D5D6D4;
-  color:$primary-bg-color;
-  border-color: #D5D6D4;
+  background: #d5d6d4;
+  color: $primary-bg-color;
+  border-color: #d5d6d4;
   &:hover {
-    background:$primary-color;
+    background: $primary-color;
     color: $primary-bg-color;
     border-color: $primary-color;
   }
