--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -1,13 +1,12 @@
-
-
 .card_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  height: 400px;
+  height: 450px;
   font-family: "Montserrat";
   font-style: normal;
+  transition: ease-out 1s;
 
   &:hover {
     scale: 1.05;
@@ -21,14 +20,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    cursor: pointer;
-   
 
     .new_fav_container {
       width: 100%;
       display: flex;
       justify-content: space-between;
       margin-top: 10px;
+
 
       .new_label {
         width: 73.12px;
@@ -94,4 +92,8 @@
       }
     }
   }
+}
+.card_image {
+  width: 70%;
+  object-fit: contain;
 }
