--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -1,5 +1,3 @@
-
-
 .card_wrapper {
   display: flex;
   flex-direction: column;
@@ -8,7 +6,9 @@
   height: 400px;
   font-family: "Montserrat";
   font-style: normal;
-
+  a {
+    text-decoration: none;
+  }
   &:hover {
     scale: 1.05;
     transition: ease-in-out 0.4s;
@@ -22,7 +22,6 @@
     align-items: center;
     justify-content: space-around;
     cursor: pointer;
-   
 
     .new_fav_container {
       width: 100%;
@@ -49,7 +48,6 @@
       font-size: 16px;
       line-height: 18px;
       color: black;
-
     }
 
     .card_model {
