--- a/src/pages/catalog/index.module.scss
+++ b/src/pages/catalog/index.module.scss
@@ -33,7 +33,7 @@ s.sort_accordion {
 .product__card_container {
   .product__card_block {
     display: flex;
-    gap: 37px;
+    gap: 30px;
     .img__block {
       padding: 90px;
       width: 600px;
@@ -146,6 +146,128 @@ s.sort_accordion {
         align-items: center;
         color: $primary-color;
       }
+    }
+  }
+}
+.features__section {
+  margin-top: 45px;
+  padding: 35px 60px;
+  width: 1240px;
+  height: 448px;
+  background: $primary-bg-color;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 0px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #444444;
+  /* identical to box height */
+  .labelMargin {
+    margin-bottom: 32px; /* Додати відстань внизу */
+  }
+
+  .valueMargin {
+    margin-top: 0px; /* Додати відстань зверху */
+  }
+  .title {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    text-transform: uppercase;
+    color: #281a08;
+  }
+  .features__section_left {
+    .line {
+      margin: 10px;
+      width: 510px;
+      border: 1px solid #a2a2a2;
+    }
+  }
+  .features__section_right {
+  }
+}
+.description__section {
+  padding: 35px 60px;
+  margin-top: 45px;
+  width: 1240px;
+  height: 227px;
+  background: $primary-bg-color;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 0px;
+  &_title {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    text-transform: uppercase;
+    color: #281a08;
+  }
+  &_text {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 23px;
+    color: #000000;
+  }
+}
+.review__section {
+  margin-top: 41px;
+  display: flex;
+  justify-content: center;
+  &_card {
+    width: 701px;
+    height: 501px;
+    background: #ffffff;
+    margin-right: 50px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  }
+  &_form {
+    width: 489px;
+    height: 501px;
+    background: #ffffff;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    padding: 35px 74px;
+    &_title {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 29px;
+      color: $secondary-bg-color;
+    }
+    align-items: center;
+    &_input {
+      margin-bottom: 30px;
+      border: none;
+      border-bottom: 1px solid #c90000;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      text-align: justify;
+      text-transform: uppercase;
+      width: 314px;
+    }
+    &_btn {
+      width: 341px;
+      height: 51px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 16px 82px;
+      gap: 10px;
+      background: #c90000;
+      color: $primary-bg-color;
     }
   }
 }
