--- a/src/components/sort/index.module.scss
+++ b/src/components/sort/index.module.scss
@@ -1,33 +1,52 @@
+.sort_wrapper {
+    position: relative;
+    display: block;
+}
+
 .select {
+    width: 100%;
     border: none;
-    background: white;
-    padding: 17px 25px;
+    padding: 17px 26px;
+    
     color: #222222;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 18px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    appearance: none; // Removes default select styling
+    -webkit-appearance: none; // For Safari
+    -moz-appearance: none; // For Firefox
+
 
     &:focus {
         outline: none;
     }
 }
+
 .option {
     padding: 17px 25px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 18px;
     color: #222222;
     border-bottom: 1px solid #E5E5E5;
-    border-radius: 0px!important;
+    border-radius: 0px !important;
     outline: 0;
     border: none;
     cursor: pointer;
+
     &:hover {
         background: #F2F2F2;
     }
+}
+
+.arrowimg {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
 }
