--- a/src/components/filter/index.module.scss
+++ b/src/components/filter/index.module.scss
@@ -20,3 +20,11 @@
     border: none;
     background: none;
 }
+.filter_title {
+    border: none;
+    box-decoration-break: none!important;
+}
+.filter_text {
+    border: none;
+    box-decoration-break: none!important;
+}
