--- a/src/components/sort/index.module.scss
+++ b/src/components/sort/index.module.scss
@@ -33,14 +33,15 @@
     font-size: 16px;
     line-height: 18px;
     color: #222222;
-    border-bottom: 1px solid #E5E5E5;
-    border-radius: 0px !important;
+    
     outline: 0;
     border: none;
-    cursor: pointer;
+    cursor: pointer !important;
 
-    &:hover {
-        background: #F2F2F2;
+    &:hover,
+    &:focus {
+        background-color: red!important;
+        cursor: pointer;
     }
 }
 
