--- a/src/components/cards/product/index.module.scss
+++ b/src/components/cards/product/index.module.scss
@@ -6,6 +6,11 @@
   height: 450px;
   font-family: "Montserrat";
   font-style: normal;
+  transition: ease-out 0.8s;
+  a {
+    text-decoration: none;
+  
+  }
 
   &:hover {
     scale: 1.05;
@@ -17,10 +22,9 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-around;
 
-    cursor: pointer;
+    
 
     .new_fav_container {
       width: 100%;
@@ -93,7 +97,10 @@
     }
   }
 }
-.card_image {
-  width: 70%;
-  object-fit: contain;
+
+.img_wrapper {
+  img {
+    width: 100%;
+    object-fit: contain;
+  }
 }
