--- a/src/components/sort/index.module.scss
+++ b/src/components/sort/index.module.scss
@@ -1,14 +1,17 @@
+@import "/src/styles/variables.scss";
+
 .sort_wrapper {
     position: relative;
     display: block;
+
 }
 
 .select {
     width: 100%;
     border: none;
     padding: 17px 26px;
-    
-    color: #222222;
+
+    color: $primary-text-color;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
@@ -18,10 +21,12 @@
     appearance: none; // Removes default select styling
     -webkit-appearance: none; // For Safari
     -moz-appearance: none; // For Firefox
+    cursor: pointer;
 
 
     &:focus {
         outline: none;
+
     }
 }
 
@@ -32,20 +37,14 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 18px;
-    color: #222222;
-    
-    outline: 0;
-    border: none;
-    cursor: pointer !important;
+    color: $primary-text-color;
 
-    &:hover,
-    &:focus {
-        background-color: red!important;
-        cursor: pointer;
-    }
 }
 
 .arrowimg {
+    color: $primary-color;
+    width: 18px;
+    height: 12px;
     position: absolute;
     right: 10px;
     top: 50%;
